# the_devils_plan_equation_hi_low

./: .pre-commit-config.yaml  README.md  _.html  main.py  next.config.mjs  package.json  pnpm-lock.yaml  pyproject.toml  statis.py  test_main.py
.github/workflows/: nextjs.yml
public/: main.py
src/app/: StrictModeDroppable.tsx  fonts.ts  layout.tsx  page.tsx  providers.tsx  theme.ts
src/app/components/: Codeblock.tsx
tests/: test_main.py
