[project]
name = "the_devils_plan_equation_hi_low"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
dependencies = []

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true


[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.4",
]
[tool.setuptools]
py-modules = []
